# homesignalAI

./: .cursorrules  .env.example  .gitignore  .vercelignore  0313 보고서.md  CHANGELOG.md  CHATBOT_ARCHITECTURE.md  CHATBOT_FIX_SUMMARY.md  CLAUDE.md  DEPLOYMENT_STATUS.md  EXECUTE_THIS_SQL.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_READY.md  README.md  README_CHATBOT.md  VERCEL_DEPLOYMENT_FIX.md  VERCEL_DEPLOYMENT_GUIDE.md  VERCEL_DEPLOY_CHECKLIST.md  VERCEL_ENV_SETUP_REQUIRED.md  collect_data.py  db_Schema(Sql)_mokdb.md  deginer_Q&A_test.md  desgin_system_guide.md  designer_rivew.md  metrics.json  monthly_update.bat  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  predict_model.py  pyproject.toml  register_scheduler.bat  requirements.txt  supabase_schema.sql  supabase_views.sql  test_chat_request.json  test_chatbot.js  test_chatbot_detailed.py  vercel.json  (+9 more)
api/: index.py
app/: globals.css  page.tsx
config/: keywords.yaml  rise_point_config.yaml
docs/: 01_PRD_HomeSignalAI.md  0228dev1.md  02_Architecture_Design.md  03_AI_Model_Pipeline.md  04_Prompt_RAG_Strategy.md  05_Deployment_Operation.md  06_Development_Journal.md  06_Rise_Point_Keyword_Extraction.md  07_API_Contract_Rules.md  07_Handover_Document.md  08_Presentation_Report.md  08_Vercel_Architecture_Guide.md  09_Organization_Roles.md  10_Frontend_Supabase_Integration_Handover.md  11_Rise_Point_Keyword_Extraction_Handover.md  12_Vector_DB_Setup_Guide.md  13_Database_Schema_and_Relationships.md  Cursor_작업_계획서.md  GITHUB_LOCAL_DIFF_REPORT_2026-03-13.md  Migration_Changes_20260306.md  P0_FIX_RESULTS.md  (+12 more)
(+154 files in other folders)
